[package]
edition = "2021"
name = "pahtecatl"
version = "0.0.1"
rust-version = "1.80"
repository = "https://github.com/huasteka/pahtecatl"
authors = ["Murilo Costa <murilonunesjose@gmail.com>"]
license = "GPL-3.0-only"

[dependencies]
config = { version = "0.14.0" }
dotenv = { version = "0.15.0" }
jsonwebtoken = { version = "9.1" }
log = { version = "0.4.22" }
reqwest = { version = "0.12.5", features = ["json"] }
salvo = { version = "0.68.5", features= ["cors", "jwt-auth"] }
serde = { version = "1" }
serde_derive = { version = "1" }
tokio = { version = "1", features = ["macros", "signal"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
